almost ready project, add tracking and extract some methods